# app/Http/Controllers/Api/SupplierController.php
@@ -10,11 +10,56 @@ use App\Http\Resources\SupplierSectionResource;
 
 class SupplierController extends Controller
 {
+    /**
+     * @OA\Get(
+     *      path="/suppliers",
+     *      operationId="getsuppliersList",
+     *      tags={"suppliers"},
+     *      summary="Get list of suppliers",
+     *      description="Returns list of suppliers",
+     *      @OA\Parameter(
+     *          name="locale",
+     *          description="App Locale",
+     *          required=true,
+     *          in="header",
+     *          @OA\Schema(
+     *              type="string",
+     *              enum={"ar", "en"},
+     *              default="ar"
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="Successful operation",
+     *          @OA\MediaType(
+     *           mediaType="application/json",
+     *      )
+     *      ),
+     *      @OA\Response(
+     *          response=401,
+     *          description="Unauthenticated",
+     *      ),
+     *      @OA\Response(
+     *          response=403,
+     *          description="Forbidden"
+     *      ),
+     *      @OA\Response(
+     *          response=400,
+     *          description="Bad Request"
+     *      ),
+     *      @OA\Response(
+     *          response=404,
+     *          description="not found"
+     *      ),
+     *     )
+     */
+
 
     public function index(Request $request)
     {
       $lang=$request->header('locale');
-      $Supplier=SupplierResource::collection(Supplier::where('parent_id','0')->orderBy('sort','asc')->get());
+//      $Supplier=SupplierResource::collection(Supplier::where('parent_id','0')->orderBy('sort','asc')->get());
+      $Supplier=SupplierResource::collection(Supplier::orderBy('sort','asc')->get());
       if($lang=='ar'){
         $Supplier->map(function($i) { $i->lang = 'ar'; });
      }else{
