# storage/api-docs/api-docs.json
@@ -948,6 +948,51 @@
                     }
                 }
             }
+        },       "/suppliers": {
+            "get": {
+                "tags": [
+                    "suppliers"
+                ],
+                "summary": "Get list of suppliers",
+                "description": "Returns list of suppliers",
+                "operationId": "getsuppliersList",
+                "parameters": [
+                    {
+                        "name": "locale",
+                        "in": "header",
+                        "description": "App Locale",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "default": "ar",
+                            "enum": [
+                                "ar",
+                                "en"
+                            ]
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {}
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "404": {
+                        "description": "not found"
+                    }
+                }
+            }
         },
         "/related_products/{id}": {
             "get": {
